--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-PyMuPDF
-python-docx
-pandas
-transformers
-torch
+streamlit==1.35.0
+transformers==4.41.1
+torch>=2.0.0
+pdfplumber==0.10.3
+python-docx==1.1.0
+pandas==2.2.2
+scikit-learn==1.5.0
+numpy==1.26.4
